fix: Don't unconditionally anchor the start button
On desktops this can look weird.

--- a/src/components/OpponentSelector/OpponentSelector.module.css
+++ b/src/components/OpponentSelector/OpponentSelector.module.css
@@ -118,3 +118,9 @@
 
   text-transform: uppercase;
 }
+
+@media (min-height: 1000px) {
+  .spacer {
+    flex: 0;
+  }
+}
